# bookmarkify

./: .gitignore  LICENSE  README.md  app.vue  build.gradle  nuxt.config.ts  package.json  pnpm-lock.yaml  settings.gradle  tailwind.config.js  tsconfig.json
api/: build.gradle
apis/: index.ts
apis/auth/: index.ts  typing.ts
apis/bookmark/: typing.ts
apis/http/: http.ts  types.ts
apis/sys/: index.ts
assets/css/: app.css  common.scss  icon.scss  main.css  styles.css
bookmarkify-admin/: nuxt.config.ts  package.json  pnpm-lock.yaml
bookmarkify-admin/app/: app.vue
bookmarkify-api/: .evn.local.example  AGENTS.md  CLAUDE.md  DockerFile  api.md  build.gradle
bookmarkify-meta-scraper/: package.json  pnpm-lock.yaml
bookmarkify-meta-scraper/src/: index.ts
bookmarkify-scrapper/: .dockerignore  .gitignore  202603252239-bookmrkify-scraper设计文档.md  CLAUDE.md  Cargo.toml  Dockerfile  README.en.md  README.md  api.md  docker-compose.yml
bookmarkify-scrapper/crates/scraper-service/: Cargo.toml
bookmarkify-scrapper/crates/scraper-service/src/: cache.rs  headless.rs  main.rs  oss.rs  scraper.rs
bookmarkify-scrapper/docs/: m0-results.md
bookmarkify-web/: .env.example  .prettierrc  AGENTS.md  CLAUDE.md  api.md  app.vue  error.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  test-avatar.js  tsconfig.json
bookmarkify-web/components/: SettingButton.vue
bookmarkify-web/domain/: index.ts
bookmarkify-web/layouts/: explore.vue  launch.vue  setting.vue
bookmarkify-web/middleware/: auth.ts
bookmarkify-web/pages/: index.vue  index.vue.bac.txt  index_version_1.txt  market.vue  setting.vue  welcome.vue
components/: client-id.vue
components/upload/: Test.vue  (+1 more)
deploy/: compose.yml  redeploy.sh
frontend/: app.vue  nuxt.config.ts  package.json
i18n/: README.zh.md
layouts/: applications.vue  default.vue  home.vue  setting.vue  sub-page.vue
pages/: index.vue  setting.vue
plugins/: autoLogin.ts  fingerprint.js  fingerprint.ts  keyListener.js  keyListener.ts
stores/: bookmark.store.ts  sys.store.ts  types.ts  user.store.ts  websocket.store.ts
web/: Dockerfile
(+556 files in other folders)
