[package]
name = "scraper-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
spider = { version = "2", features = ["chrome", "chrome_stealth"] }
once_cell = "1"
moka = { version = "0.12", features = ["future"] }
tower_governor = { version = "0.4", features = ["axum"] }
